--- a/forma/Cargo.toml
+++ b/forma/Cargo.toml
@@ -4,5 +4,5 @@ version = "0.1.0"
 edition = "2018"
 
 [dependencies]
-forma-lib = { path = "../forma-lib" }
+formation = { path = "../formation" }
 sqlparser = "0.5.0"
