--- a/forma/Cargo.toml
+++ b/forma/Cargo.toml
@@ -1,8 +1,12 @@
 [package]
 name = "forma"
 version = "0.1.0"
+authors = ["Max Countryman <maxc@me.com>"]
 edition = "2018"
+description = "An opinionated SQL formatter."
+license = "MIT"
 
 [dependencies]
 formation = { path = "../formation" }
 sqlparser = "0.5.0"
+structopt = "0.3.14"
