--- a/formation/Cargo.toml
+++ b/formation/Cargo.toml
@@ -9,3 +9,10 @@ license = "MIT"
 [dependencies]
 sqlparser = "0.5.0"
 pretty = "0.10.0"
+
+[dev-dependencies]
+criterion = "0.3"
+
+[[bench]]
+name = "formation_bench"
+harness = false
