--- a/formation/Cargo.toml
+++ b/formation/Cargo.toml
@@ -13,6 +13,7 @@ pretty = "0.10.0"
 [dev-dependencies]
 criterion = "0.3"
 pretty_assertions = "0.6.1"
+rstest = "0.6.3"
 
 [[bench]]
 name = "formation_bench"
