--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -85,4 +85,8 @@ jobs:
       - uses: actions/checkout@v1
       - name: Publish
         shell: bash
-        run: cargo publish --token ${{ secrets.CRATES_TOKEN }}
+        run: |
+          cd forma
+          cargo publish --token ${{ secrets.CRATES_TOKEN }}
+          cd ../formation
+          cargo publish --token ${{ secrets.CRATES_TOKEN }}
