--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -86,7 +86,5 @@ jobs:
       - name: Publish
         shell: bash
         run: |
-          cd forma
-          cargo publish --token ${{ secrets.CRATES_TOKEN }}
-          cd ../formation
-          cargo publish --token ${{ secrets.CRATES_TOKEN }}
+          cargo publish --token ${{ secrets.CRATES_TOKEN }} --manifest-path forma/Cargo.toml
+          cargo publish --token ${{ secrets.CRATES_TOKEN }} --manifest-path formation/Cargo.toml
