--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Setup Rust
+    - name: Set up Rust
       uses: hecrj/setup-rust-action@v1
       with:
         rust-version: nightly
@@ -86,5 +86,4 @@ jobs:
       - name: Publish
         shell: bash
         run: |
-          cargo publish --token ${{ secrets.CRATES_TOKEN }} --manifest-path formation/Cargo.toml
-          cargo publish --token ${{ secrets.CRATES_TOKEN }} --manifest-path forma/Cargo.publish.toml
+          cargo publish --token ${{ secrets.CRATES_TOKEN }} --manifest-path forma/publish/Cargo.toml
