work around workspace creation

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -86,4 +86,5 @@ jobs:
       - name: Publish
         shell: bash
         run: |
-          cargo publish --token ${{ secrets.CRATES_TOKEN }} --manifest-path forma/publish/Cargo.toml
+          cp forma/publish/Cargo.toml forma/Cargo.toml
+          cargo publish --token ${{ secrets.CRATES_TOKEN }} --manifest-path forma/Cargo.toml
