ensure we can publish

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -87,4 +87,4 @@ jobs:
         shell: bash
         run: |
           cp forma/publish/Cargo.toml forma/Cargo.toml
-          cargo publish --token ${{ secrets.CRATES_TOKEN }} --manifest-path forma/Cargo.toml
+          cargo publish --token ${{ secrets.CRATES_TOKEN }} --manifest-path forma/Cargo.toml --allow-dirty
