--- a/formation/Cargo.toml
+++ b/formation/Cargo.toml
@@ -13,6 +13,7 @@ license = "MIT"
 [dependencies]
 sqlparser = "0.5.0"
 pretty = "0.10.0"
+thiserror = "1.0.19"
 
 [dev-dependencies]
 criterion = "0.3"
