--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,10 +44,24 @@ jobs:
       uses: hecrj/setup-rust-action@v1
       with:
         rust-version: nightly
+    - name: Install Tarpaulin
+      uses: actions-rs/install@v0.1
+      with:
+        crate: cargo-tarpaulin
+        version: 0.13.3
+        use-tool-cache: true
     - name: Checkout
       uses: actions/checkout@v2
     - name: Test
       run: cargo test
+    - name: Coverage
+      run: |
+        # Tarpaulin interoperates with CI services, however Actions is not
+        # currently supported. As a workaround, we can pretend to be Travis.
+        export TRAVIS_JOB_ID=${GITHUB_SHA}
+        export TRAVIS_PULL_REQUEST=false
+        export TRAVIS_BRANCH=${GITHUB_REF##*/}
+        cargo tarpaulin --ciserver travis-ci --coveralls $TRAVIS_JOB_ID
 
   publish-docs:
     if: github.ref == 'refs/heads/master'
